<resources>
    <string name="app_name">wanAndroid</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="home">首页</string>
    <string name="tree">体系</string>
    <string name="navi">导航</string>
    <string name="my">我的</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="collection">我的收藏</string>
    <string name="news">消息列表</string>
    <string name="integral">积分</string>
    <string name="logout">退出</string>
</resources>