<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="?attr/actionBarSize"-->
<!--        android:background="@color/white"-->
<!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
<!--        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->




    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_gravity="bottom|end"

        >

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_home"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/rb_tree"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_tree"
            android:text="@string/tree" />

        <RadioButton
            android:id="@+id/rb_navi"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_navi"
            android:text="@string/navi" />

        <RadioButton
            android:id="@+id/rb_my"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_my"
            android:text="@string/my" />

    </RadioGroup>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/rg_tab_bar"
        android:background="@color/black" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rg_tab_bar"
        />
</RelativeLayout>