<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_head_protrait"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/portrait"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_head_protrait"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/LightSkyBlue"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/ll_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_username"
        android:padding="10dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/collection"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_collection"
        android:padding="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/news"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_integral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_news"
        android:padding="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/integral"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integral"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_integral"
        android:padding="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logout"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"/>
    </LinearLayout>

</RelativeLayout>